--- a/templates/Admin/dashboard.html.twig
+++ b/templates/Admin/dashboard.html.twig
@@ -5,20 +5,17 @@
 
 {% block body %}
     {# FIXME: Afficher Hello <firstname> <lastname> #}
-    Hello John Doe
+    Hello {{ app.user.firstname }} {{ app.user.lastname }}
 
 
     {# FIXME: Lister les utilisateurs et afficher un lien de suppression #}
 
     <ul>
+        {% for user in users %}
         <li>
-            <a href="/profile/1">John Doe - foo@exemple.org</a>
-            <a href="/admin//delete-user/1">delete</a>
+            <a href="{{ path("profile", {id:user.id}) }}">{{ user.firstname }} {{ user.lastname }} - {{ user.email }}</a>
+            <a href="{{ path("delete", {id:user.id}) }}">delete</a>
         </li>
-        <li>
-            <a href="/profile/2">Foo Bar - foo@exemple.org</a>
-            <a href="/admin//delete-user/2">delete</a>
-
-        </li>
+        {% endfor %}
     </ul>
 {% endblock %}
