--- a/templates/Homepage/homepage.html.twig
+++ b/templates/Homepage/homepage.html.twig
@@ -14,9 +14,15 @@
      #}
 
     <ul>
-            <li>
-                <strong><a href="/profile/1">John Doe - user@exemple.com</a></strong>
-                <a href="/profile/2">Foo Bar - foo@exemple.com</a>
-            </li>
+        {% for user in users %}
+            {% if user == app.user %}
+                <li>
+                    <strong><a href="/profile/{{ user.id }}">{{ user.firstname }} {{ user.lastname }} - {{ user.email }}</a></strong>
+
+                </li>
+        {% else %}
+            <a href="/profile/{{ user.id }}">{{ user.firstname }} {{ user.lastname }} - {{ user.email }}</a>
+        {% endif %}
+        {% endfor %}
     </ul>
 {% endblock %}
