--- a/templates/User/profile.html.twig
+++ b/templates/User/profile.html.twig
@@ -13,9 +13,9 @@
     #}
 
     <ul>
-        <li>First name: Foo</li>
-        <li>Last name: Bar</li>
-        <li>Email: foo.bar@exemple.org</li>
-        <li>Birthday: January 1, 1980 00:00</li>
+        <li>First name: {{ user.firstname }}</li>
+        <li>Last name: {{ user.lastname }}</li>
+        <li>Email: {{ user.email }}</li>
+        <li>Birthday: {{ user.birthday|date("F d, Y g:i") }} </li>
     </ul>
 {% endblock %}
