fin seance, register bug

--- a/templates/Security/register.html.twig
+++ b/templates/Security/register.html.twig
@@ -14,5 +14,8 @@
         birthday
 
     #}
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
     <input type="submit" value="register" />
 {% endblock %}
